更新语言偏好设置，优化UI布局和资源管理
主要改进：
- 更新language_preference.properties文件中的时间戳。
- 在ChampionSelectorApplication中添加资源管理器的关闭逻辑，确保在应用退出时清理资源。
- 在AutoAcceptController和ChampionSelectorController中引入资源管理器，优化滚动速度设置。
- 调整ChampionSelectorConfig中的最小列数设置，提升界面适应性。
- 在SkillDetailsController中添加技能详情的滚动速度优化。
- 增强错误处理和日志记录，确保在各个模块中更好地管理资源和状态。

这些改进提升了用户体验，确保在使用过程中获得更流畅的操作和更清晰的信息反馈。